--- a/index.html
+++ b/index.html
@@ -169,9 +169,31 @@ across numerous natural sequences.
 			<br>
 			Tuan Duc Ngo, Peiye Zhuang, Chuang Gan, Evangelos Kalogerakis, Sergey Tulyakov, Hsin-Ying Lee, <b>Chaoyang Wang</b>
 			<br>
-			in Submission
+			ICLR 2025
 		<strong>[
 			<a href="https://snap-research.github.io/DELTA/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td valign="middle" width="350">
+				<!-- <div style="position: relative; width: 100%; overflow: hidden; height: 50%;"> -->
+				<video autoplay muted loop width="300" src="projects/gtr/teaser.mp4" type="video/mp4">
+				</div>
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>GTR: Improving Large 3D Reconstruction Models through Geometry and Texture Refinement</papertitle>
+			<br>
+			Peiye Zhuang, Songfang Han,  <b>Chaoyang Wang</b>, Aliaksandr Siarohin, Jiaxu Zou, Michael Vasilkovsky,
+			Vladislav Shakhrai, Sergey Korolev, Sergey Tulyakov, Hsin-Ying Lee
+			<br>
+			ICLR 2025
+		<strong>[
+			<a href="https://snap-research.github.io/GTR/">project</a>
 			]
 		</strong>
 		</p>
@@ -194,28 +216,6 @@ across numerous natural sequences.
 			NeurIPS 2024
 		<strong>[
 			<a href="https://snap-research.github.io/4Real/">project</a>
-			]
-		</strong>
-		</p>
-			</td>
-		</tr>
-
-		<tr>
-			<td valign="middle" width="350">
-				<!-- <div style="position: relative; width: 100%; overflow: hidden; height: 50%;"> -->
-				<video autoplay muted loop width="300" src="projects/gtr/teaser.mp4" type="video/mp4">
-				</div>
-			</td>
-			<td valign="middle" width="600">
-			<p>
-			<papertitle>GTR: Improving Large 3D Reconstruction Models through Geometry and Texture Refinement</papertitle>
-			<br>
-			Peiye Zhuang, Songfang Han,  <b>Chaoyang Wang</b>, Aliaksandr Siarohin, Jiaxu Zou, Michael Vasilkovsky,
-			Vladislav Shakhrai, Sergey Korolev, Sergey Tulyakov, Hsin-Ying Lee
-			<br>
-			in Submission
-		<strong>[
-			<a href="https://snap-research.github.io/GTR/">project</a>
 			]
 		</strong>
 		</p>
