update cvpr results

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ across numerous natural sequences.
 			<br>
 			<b>Chaoyang Wang</b><sup>*</sup><sup>&#8224</sup>, Peiye Zhuang<sup>*</sup>, Tuan Duc Ngo<sup>*</sup>, Willi Menapace, Aliaksandr Siarohin, Michael Vasilkovsky, Ivan Skorokhodov, Sergey Tulyakov, Peter Wonka, Hsin-Ying Lee
 			<br>
-			in Submission
+			CVPR 2025
 		<strong>[
 			<a href="https://snap-research.github.io/4Real-Video/">project</a>
 			]
@@ -154,6 +154,29 @@ across numerous natural sequences.
 			</td>
 		</tr>
 
+		<tr>
+			<td valign="middle" width="350">
+				<video autoplay muted loop width="140">
+					<source src="https://ziyaerkoc.com/preditor3d/static/videos/oreo_input.mp4"  type="video/mp4">
+				</video>
+				<video autoplay muted loop width="140">
+					<source src="https://ziyaerkoc.com/preditor3d/static/videos/oreo_output.mp4"  type="video/mp4">
+				</video>
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>PrEditor3D: Fast and Precise 3D Shape Editing</papertitle>
+			<br>
+			Ziya Erkoç,   Can Gümeli,   <b>Chaoyang Wang</b>,   Matthias Niessner,   Angela Dai,   Peter Wonka,   Hsin-Ying Lee,   Peiye Zhuang
+			<br>
+			CVPR 2025
+		<strong>[
+			<a href="https://ziyaerkoc.com/preditor3d/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
 
 		<tr>
 			<td valign="middle" width="350">
@@ -194,6 +217,29 @@ across numerous natural sequences.
 			ICLR 2025
 		<strong>[
 			<a href="https://snap-research.github.io/GTR/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td valign="middle" width="350">
+				<!-- <center> -->
+				<video autoplay muted loop width="300">
+					<source src="https://zqh0253.github.io/3DitScene/media/video/dragon.mp4"  type="video/mp4">
+				</video>
+				<!-- </center> -->
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>3DitScene: Editing Any Scene via Language-guided Disentangled Gaussian Splatting</papertitle>
+			<br>
+			Qihang Zhang, Yinghao Xu, <b>Chaoyang Wang</b>, Hsin-Ying Lee, Gordon Wetzstein, Bolei Zhou, Ceyuan Yang
+			<br>
+			ICLR 2025
+		<strong>[
+			<a href="https://zqh0253.github.io/3DitScene/">project</a>
 			]
 		</strong>
 		</p>
