--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ across numerous natural sequences.
 			<br>
 			<b>Chaoyang Wang</b><sup>*</sup><sup>&#8224</sup>, Peiye Zhuang<sup>*</sup>, Tuan Duc Ngo<sup>*</sup>, Willi Menapace, Aliaksandr Siarohin, Michael Vasilkovsky, Ivan Skorokhodov, Sergey Tulyakov, Peter Wonka, Hsin-Ying Lee
 			<br>
-			CVPR 2025
+			CVPR 2025 (Highlight)
 		<strong>[
 			<a href="https://snap-research.github.io/4Real-Video/">project</a>
 			]
@@ -715,7 +715,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2025-01-12.</i>
+<i>Last modified by Wang Chaoyang, 2025-04-05.</i>
 <div style="display:none"><a href='ri_thesis_poposal.pdf'><!-- nothing --></a></div>
 <!-- <hr>
 <table border="0">
